<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Other string resources also defined in this file… -->
    <string name="feedbacktype1">Praise</string>
    <string name="feedbacktype2">Gripe</string>
    <string name="feedbacktype3">Suggestion</string>
    <string name="feedbacktype4">Bug</string>
    <string name="register">Register</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="todo">TODO</string>
    <string name="scan_qr">Scan QR</string>
    <string name="user1">User1</string>
    <string name="name1">Name1</string>
    <string name="email1">Email1</string>
    <string name="username2">Username :</string>
    <string name="name2">Name :</string>
    <string name="loginPassword">Password</string>
    <string name="loginUsername">Username</string>
</resources>