<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".Info">

    <LinearLayout
        android:layout_width="137dp"
        android:layout_height="65dp">

        <ImageButton
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:src="@drawable/logout"
            android:backgroundTint="@color/purple_500" />

    </LinearLayout>


    <ImageView
        android:layout_width="172dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        android:src="@drawable/info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextTitleUsername"
            style="@style/modifiedEditText"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/username2"
            android:maxLines="1" />
        <TextView
            android:id="@+id/TextUsername"
            style="@style/modifiedEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:text="@string/user1"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextTitleName"
            style="@style/modifiedEditText"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/name2"
            android:maxLines="1" />
        <TextView
            android:id="@+id/TextName"
            style="@style/modifiedEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start |center"
            android:text="@string/name1"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/TextTitleEmail"
        style="@style/modifiedEditText"
        android:layout_width="116dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="Email : "
        android:maxLines="1" />
    <TextView
        android:id="@+id/TextEmail"
        style="@style/modifiedEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start |center"
        android:text="Email1"
        android:maxLines="1" />
</LinearLayout>


    <ImageButton
        android:id="@+id/scanBtn"
        android:layout_width="154dp"
        android:layout_height="134dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTintMode="screen"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:src="@drawable/qrcode" />


</LinearLayout>


