<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reg_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".Registration">

    <LinearLayout
        android:layout_width="145dp"
        android:layout_height="61dp">
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:backgroundTint="@color/purple_500"
            android:src="@drawable/back"
            android:id="@+id/regBackBtn">

        </ImageButton>


    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="126dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        android:src="@drawable/register_icon" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextName"
            style="@style/modifiedEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/modifiedEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextUsername"
            style="@style/modifiedEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/modifiedEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imgBtnSubmit"
        android:layout_width="155dp"
        android:layout_height="79dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/white"
        android:src="@drawable/submit_icon" />

</LinearLayout>


